Fix wordwrap

--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -13,10 +13,9 @@ header {
 
   @include desktop {
     width: $size-contentwith-desktop;
-    padding: 2rem 2rem 0.5rem 2rem;
+    padding: 2rem;
   }
-
-  padding: 1rem;
+  padding: 2rem 1rem;
 }
 
 header > div.header-menu {
